--- a/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormTraHangNCC.resx
+++ b/BachHoaXanhStore/BachHoaXanh_Store/BachHoaXanh_Store/FormTraHangNCC.resx
@@ -126,19 +126,25 @@
   <metadata name="col_TenSP.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="col_DonViTinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="col_DVT.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="col1_MaSP.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="col1_TenSP.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="col1_DVT.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="col_GiaVon.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="col_SoLuong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="MaSP.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TenSP.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="SoLuong.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="GiaVon.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="col_NgayHetHan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -201,41 +207,41 @@
   </data>
   <data name="txtKeyWord.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOIAAAAiCAYAAABC+AVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANjSURBVHhe7d1bSBRRHAbwfeyxxx577LG30g3MNNz1nouV
-        zq57cXTHdRW7iHYhSrIiFOlmaKkpkZiYhUlGIRiCRWEIklRQPmQQZut6q/Rh68sjumjrqjtDsd8PztOu
-        Mz7sx3/mnP+c0RHRfywiI22bXkorjZGlaqNie42hN5t8HBzhMhZ+93G5lka9ZDqtl/btFPFQV5Q1fQtO
-        ulc2j6YW5nivNTfNtTzq8PW/GfwziMLJwu++/eljX11bi08qKfLscWR4jYq1NTIzfbuITehEWVM2/07+
-        5XjF5sVJP49+Ef8KES01Nu7xdT7r9u0/7BpHIFG8RIw2BuXW4Mzy1N+7+/3n7Kw4HRGtBoFE8YrNsVhE
-        nNYn3mk/ZD1+ZHRyekocmojWAsWruKL8W7JbrhaxWpvE/Oy6suuXPKyCRBtX39YykVIgPxDxCo7RmXXs
-        Yn2NVxyDiELgdkf7DAqciFlgesm0Wz5VOspKSBR6uExd9Z4RMzyJLsdX3hMSqQMFzlSkjGEdXsRuOYNi
-        q73z8P6c+BsiUkHPqxe+BMXWLWLnb4c1ZWuyW+bkDJEGsPi/YicOFh+x7kFE6kNHDtrjRPwWoTUHXQFE
-        pD5cecbK0hS61kQEdboIc1oqSqX4DhFpoKTyvDcy06SIGOp06CS/1d7KSRoiDeFWENkTMZwP4pO+XvEx
-        EWlh8P3b5UHElCoRaefd8MflQcTjTUSknecD/f5BjDSbqoounBkXnxORBiobb/7QW0wNIoZobbNuirYf
-        5POGRBpKyLNPopFGxHBefJ69D6WSiNSH+0ODM+uDiN+iXeZ9BqXsBNcSiTRwtubKRIxDKhDx84dGVM6e
-        Eqnrr9VwAXaewqY34vtEpAJMjKKbTcRuZcn52eVVTXUMI5EKWrs6Z5Lc2c0iboEluRxdXb09nEIlCiE8
-        cZHkll9ilUJELTB8McFlH2AYiUIDIUwtzBnye9oiGAgjKiM3kSLamPnLUVTCNYZwKezo5jhZ7EGDKhEF
-        DzviY2IG94RBX44Ggp3djIptCAcdHvkkTkNEK0EAKxpqp/COmFVnR9cDB43LtYygNefcjavT6MTBmghR
-        OENxwj0gXsqElzMhgNG2A0dFbNSD/jg8WYy2OCxMooOcgyNcB4oT9p/BawoDbpNIRP8yne4XVoN+gSg3
-        YAkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAAAiCAYAAACpz75gAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAANjSURBVHhe7d1dSFNhHAbwXXbZZZdddtld6QIzDTe/c1jp
+        2dyHR3ecU+xDtA+iJCtCkb4MLTUlEhOzMMkoBEOwKAxBkgrKiwxi2ZxflV6snnyHLW1OtzMKnx+8V5vn
+        eLGH/znv+z/v0RDRfyoqK2OLVsooj5OlWr1ieYmhNRq8HBzrYfh+8wn5pmatZDiplfZsF9FQV4w5cxNO
+        uls2utKL8zxXWlvm2x50eQdfDf8aROuF7zff+fiht6GjzSuVlbh32bI8esXcHp2duVVEJnxizGkbf6b+
+        YqJi8eCkH12fxL9CRD7jE25v95Ne796DjgmEEUVLRCg0KLM6e4678c7tr9/n5sTpiCgQhBFFKz7PZBJR
+        WptEu/WA+egh19TMtDg0EQULRau0qvJLqlOuFZFaneTC3IaKqxfcrH5EoWnsaJtMK5LviWgFR2/POXK+
+        sc4jjkFEIbrZ1TmLwiYiFphWMuyUT5S7WAGJwguXpiveI2I2J9lh+8x7QKLwQ2EzlCjjWGMXkVtKp1jq
+        b92/Oy/+hojCrO/FM2+SYukVkfO3zZy2OdUpcyKGSGVY2F+2wwaLi1jbICJ1odMGLW8ieovQcoMVfyJS
+        F64242VpGp1oIn4aTZQxIx0lUnyHiFRWVn3WE51tUEQENRp0hd/obOeEDFGE4NYPuRMRXAjho4F+8TER
+        qW347eulIcTUKRFFxpvR90tDiEeUiCgyng4N+ocw2mioKTl3akJ8TkQqq26+/k1rMjSJCKJdzbwh1rqf
+        zwsSRUhSgXUKDTIiggsSC6wDKJFEpC7cD+rsOe9E9BbtMO7RKRXHuFZIpLLTdZcm42xSkYiePzSWcpaU
+        SD1/rYI+2CUKm9SI7xNRmGECFB1qInLLSy3MraxpaWAQicKsvad7NsWZ2yqiFliKw9bT09/HqVKiMMGT
+        EylO+TlWIkTMAsMXkxzWIQaRKHQIYHpx3ojfUxPBQBBREbnhE9HaLVyCogKuMoC/w85rtuOlbjScElFw
+        sEs9JmFwDxj0JWgg2IFNr1hGcNDRsQ/iNET0J4Svqql+Gu9rWXEWdC1w0IR80xhabs5cuzyDDhusexCt
+        VyhKuOfDy5HwkiSEL9ay77CIjHrQ84angtHqhoVHdINzcKzHgaKE/WLwmsCAWxkS0b9Ko/kBFnEDJ54k
+        mPsAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btn_TimKiem.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOMAAAAiCAYAAACtOm5dAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALBSURBVHhe7d2xb9NAFMdxj4yMjIyMjIyMjPwD7CwMSAww
-        wYKaOyNVQsm5IKGKiYGJjQlGhNrchakbG1OhTdpSEB3gvfhVJe2Rpk0cQP0+6aNUre3L0J/uzj7bBUVR
-        /3k9WX10KUR/t0plqGKZhpL/CZwp9r+/lNzzKrkHYbV1xSLSbLXf+wvaaEh+XRoehJ7fk8/8lwTOEMlE
-        /XPPbw6zkdzLdvKXLTqzq8W0eF4aeCyNSSOjXwLAH/WHoZROzKI0XWm3W0W/GbruW6YxAMcbSH5uWKRO
-        V+3kbsu8UIak2QYATG5DRpfBonWykt7wWYhOxr/ZAwM4uS3xyiI2WXVi656EcXDoQACmFVu72tFZ1MZX
-        lcqrMulkaAo0Z+PYOaSe9ZFx7efMzgBmKboveq3eone0Qrd82kluL7szgNmK/o1Fb7SqtHCREzbAHPX8
-        ZnbFjl6czO4AoDmxTBbBg9IlPNmNATQnuh1d4WYxLAqZJ16v19RlNgbQmJD8oNN1Ny2K2ivKL6Mu+s7v
-        AKBZFsU6jDJMPbIBgPmwKO6HEcDfYlG0YeqhPwJo3n7uLIoSxlguVtH3D28IoGHRfQ/RLVsUi2L57f1z
-        MmfkfkVg3qLf1gU3FsW6JIzvGKoCcxbdR4vgQbW7/lrVYzkcMC8h+q1Od+GWRXC0dOFqbicADcj1ivul
-        T7OSjTiRAzQt+r6ufLPo5avT9Q9l7kgggYaEbmt3KfkXFrnxJal9Lan9kTsQgKmt6BUMi9v4qi91lB8I
-        JDBbMupcG7lLY5IaBlJ6SMGtVcCUdGgqnysnDuLvpU+KC5Hbq4BTi76vc8SJh6bjqn5inF/Tg2YbA5Dh
-        diQ368eeNT1N6UFDan2SUG5XPf+VFTvAKHsZlL6TZr2KrTsWneZK19Lp3cm6hE4vXOa+FHCW1J1UmfQ1
-        iWMfwUhR1L9eRfELu76VADipuZUAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAOEAAAAiCAYAAACpz75gAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALASURBVHhe7d2/b9NAGMZxj4yMjIyMjIyMjPwD7CwMSB1g
+        ggU1d0aqhJJzQUIVEwMTGxOMCLW+C1M3NqZCm7SlIDrAe/FbtWmO/MKOQPm+0kepWtuXoY/uzj7bGUVR
+        /2k93Xp8xXl7rwi5K3weBoL9BSwF/Z9fD+ZFEcxDt9W6ptFottof7KXYqAt2Rxruu649ls/0lwSWgGSh
+        +rlr9waZCOZVO9irGpn6ai2sXZQGnkhj0sjwlwAwojcIo3RaGqG/q9jNFt7uudJ8TzQG4M/6kptbGqX5
+        qh3MXZn3ydAz2QCAyXZlFOk0UrOV9H7PnTcyzk0eGMD09sVrjdZ01fGt+xLC/rkDAZiXbx3Fjk0jNr6K
+        kF+XSSVDUKB+uxPniPFsjoxfvyR2BlAHb77Ga+waudFyZf6sE8xxcmcA9fD2rUZuuIqwepkTMcACdO1e
+        coVNvLiY3AFA/XweNHqnFZfcJDcGUD9vDuNKNI1flsk88Ga19i2xMYDauWD7ndLc1gjGXlB+6eNi7PQO
+        AJqhEaxCKMPRkQ0ANEsjeBJCAIumEdTh6Lk/AmjOSd40ghJCn68V3vbObwigId78cN5saASzbOPdgwsy
+        J+R+QWBRvD2IC2Q0glVJCN8zJAUWxJtPGr3Tapf2RtFl2RrQNOftfqdcvaPRG664sDS1E4AapXrBk4pP
+        iZKNOEEDNMXbXlyhppFLV6e0j2RuSBCBmrmydbQe7EuN2viStL6RtP5MHQjA3DbjlQiN2fiqLlnkHwki
+        UA8ZXW4P3TUxTQ2CKD2i4BYnYE5xCCqfmzMH8GzFJ685z21OwMy87cU54NRD0HFVPYHNbseDJhsDcIY5
+        lLzsTDwLOk/Fg7rQ+ixhPCi69hsrbICKvhwpvqtlp/CtFY1McxXXvMW7guNSt3jhMfWlgGVQdUp5iK8J
+        HPsoQ4qi/tXKst8239kxLxEdBAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
